Esta es la tercera version

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <h4>Aquí esta el subtitulo 4</h4>
     <h5>Aquí esta el subtitulo 5</h5>
     <h6>Aquí esta el subtitulo 6</h6>
-
+<!--Etiqueta de parrafo-->
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit minus quo, aperiam assumenda provident harum, corrupti, reprehenderit illum praesentium corporis facilis numquam debitis quas quasi consequuntur fuga accusamus dolorum voluptate.</p>
     
-   
 </body>
 </html>
 
