--- a/index.html
+++ b/index.html
@@ -2,21 +2,128 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Primera Web</title>
 </head>
 <body>
     <!--Etiquta de titulo-->
-    <h1>Aquí esta el título</h1>
+    <h1 style="background: rgb(255, 0, 43);">Nyan Repository</h1>
     <h2>Aquí esta el subtitulo 2</h2>
     <h3>Aquí esta el subtitulo 3</h3>
     <h4>Aquí esta el subtitulo 4</h4>
     <h5>Aquí esta el subtitulo 5</h5>
     <h6>Aquí esta el subtitulo 6</h6>
 <!--Etiqueta de parrafo-->
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit minus quo, aperiam assumenda provident harum, corrupti, reprehenderit illum praesentium corporis facilis numquam debitis quas quasi consequuntur fuga accusamus dolorum voluptate.</p>
-    
+<p>Lorem ipsum <strong>texto importante</strong> dolor <span>corrupti</span> sit amet consectetur adipisicing elit.Suscipit minus quo, 
+aperiam assumenda provident harum, corrupti, reprehenderit illum praesentium corporis facilis numquam debitis quas quasi 
+consequuntur fuga accusamus dolorum voluptate.</p>
+<hr>
+<!--Etiqueta de enlace-->
+<a style="background-color: rgb(43, 226, 134);" href="https://www.youtube.com/watch?v=2yJgwwDcgV8"> Ir a youtube</a>
+<!--Etiqueta de imagen-->
+<img  src="img/Nyan_cat_250px_frame.PNG" alt="icono Nyan_cat_250px_frame" width="200px" height="200px">
+    <!--Etiqueta de parrafo-->
+    <br>
+    <a style="background-color: darkorchid;" href="paginas/contacto.html">Ir a contactos</a>
+    <!--Etiqueta de lista-->
+    <h2>Paises de latinoamerica</h2>
+    <ul>
+        <li>Peru</li>
+        <li>Ecuador</li>
+        <li>Chile</li>
+    </ul>
+     <!--lista ordenada-->
+     <h2>Tabla de posiciones</h2>
+     <ol>
+        <li>Primero</li>
+        <li>Segundo</li>
+        <li>Tercero</li>
+     </ol>
+     <!--Contenedores-->
+     <section>
+        <div>
+            <article>
+                <h2>XD</h2>
+                <p>pe, causa la triste de situación de quishpe en el transcurso de su vida donde conoce una paloma </p>
+            </article>
+            <article>
+                <h2>Articúlo informativo</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+                    Libero incidunt quo dicta! Et quas delectus culpa ipsum fuga unde 
+                    labore quae sed voluptatum placeat rerum eveniet harum non, odio illo.</p>
+            </article>
+        </div>
+     </section>
+
+     <!--Tablas-->
+     <div>
+        <h2>Población de latinoamerica</h2>
+     </div>
+     <div>
+        <table border="1">
+            <thead>
+                <th>numero</th>
+                <th>pais</th>
+                <th>poblacion</th>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>1</td>
+                        <td>Argentina</td>
+                        <td>45.376.763</td>
+                    </tr>
+                    <tr>
+                        <td>2</td>
+                        <td>Ecuador</td>
+                        <td>18.000.000</td>
+                    </tr>
+                    <tr>
+                        <td>3</td>
+                        <td>Perukistan</td>
+                        <td>32.626.000</td>
+                    </tr>
+                    <tr>
+                        <td>4</td>
+                        <td>Colombia</td>
+                        <td>52.032.000</td>
+                    </tr>
+                    <tr>
+                        <td>5</td>
+                        <td>Chile</td>
+                        <td>19.066.000</td>
+                    </tr>
+                    <tr>
+                        <td>6</td>
+                        <td>Bolivia</td>
+                        <td>12.024.000</td>
+                    </tr>
+                    <tr>
+                        <td>7</td>
+                        <td>Guatemala</td>
+                        <td>18.012.000</td>
+                    </tr>
+                    <tr>
+                        <td>8</td>
+                        <td>Uruguay</td>
+                        <td>3.338.000</td>
+                    </tr>
+                    <tr>
+                        <td>9</td>
+                        <td>Uruguay</td>
+                        <td>3.338.000</td>
+                    </tr>
+                    <tr>
+                        <td>10</td>
+                        <td>Uruguay</td>
+                        <td>3.338.000</td>
+                    </tr>
+                </tbody>
+                
+        </table>
+     </div>
+
 </body>
 </html>
+
 
