--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@ consequuntur fuga accusamus dolorum voluptate.</p>
      <section>
         <div>
             <article>
-                <h2>XD</h2>
-                <p>pe, causa la triste de situación de quishpe en el transcurso de su vida donde conoce una paloma </p>
+                <h2>Titulo 2</h2>
+                <p> descripcion</p>
             </article>
             <article>
                 <h2>Articúlo informativo</h2>
@@ -110,13 +110,13 @@ consequuntur fuga accusamus dolorum voluptate.</p>
                     </tr>
                     <tr>
                         <td>9</td>
-                        <td>Uruguay</td>
-                        <td>3.338.000</td>
+                        <td>Mexico</td>
+                        <td>129.007.000</td>
                     </tr>
                     <tr>
                         <td>10</td>
-                        <td>Uruguay</td>
-                        <td>3.338.000</td>
+                        <td>Brazil</td>
+                        <td>211.100.000</td>
                     </tr>
                 </tbody>
                 
