--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ consequuntur fuga accusamus dolorum voluptate.</p>
                 <h2>Articúlo informativo</h2>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
                     Libero incidunt quo dicta! Et quas delectus culpa ipsum fuga unde 
-                    labore quae sed voluptatum placeat rerum eveniet harum non, odio illo.</p>
+                    labore quae sed voluptatum placeat rerum eveniet harum non, odio illo. asdsa</p>
             </article>
         </div>
      </section>
